# hermes-backend

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  check_dynamic.sh  check_metar_london_nov12.py  config.local.yaml.example  debug_metar_api.py  monitor_dynamic.py  monitor_trades.py  pyproject.toml  requirements.txt  test_metar_manual.py
agents/: __init__.py  backtester.py  edge_and_sizing.py  prob_mapper.py  zeus_forecast.py
agents/dynamic_trader/: __init__.py  dynamic_engine.py  fetchers.py  snapshotter.py
agents/prob_models/: __init__.py  bands_model.py  spread_model.py
backend/: README.md  requirements.txt  test_server.py
backend/api/: main.py
backend/tests/: test_backtest_service.py  test_config_routes.py  test_config_service.py  test_engine_routes.py  test_engine_service.py  test_log_service.py  test_metar_routes.py  (+3 more)
core/: __init__.py  config.py  feature_toggles.py  logger.py  orchestrator.py  registry.py  station_calibration.py  time_utils.py  types.py  units.py
hermes-api/: api_key_usage.py  dewpoint_temperature.py  precipitation.py  requirements.txt  surface_pressure.py  temperature.py  wind.py
scripts/: fix_nyc_snapshot_times.py
tests/: __init__.py  test_backtester.py  test_dynamic_trader.py  test_edge_and_sizing.py  test_metar_service.py  test_paper_execution.py  test_polymarket_discovery.py  test_polymarket_pricing.py  test_prob_mapper.py  test_prob_models.py  test_registry.py  test_resolution.py  test_time_utils.py  test_units.py  test_zeus_forecast.py
venues/: __init__.py
(+51 files in other folders)
